[tool.poetry]
name = "p2p-messages"
version = "0.1.0"
description = "An application allowing encrypted p2p communications."
authors = ["Uri Bar Ilan <ubarilan@gmail.com>"]
readme = "README.md"
packages = [{include = "p2p_messages"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
